<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.2</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.tjtechy</groupId>
	<artifactId>CacheWithRedisInSpringBootApi</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>CacheWithRedisInSpringBootApi</name>
	<description>CachingWithRedisInstance</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>17</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<!-- MockMvc for API Testing -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<!-- Add mockito-inline instead of mockito-core only applicable if using jdk 21 -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-inline</artifactId>
			<version>4.0.0</version> <!-- Use the latest version -->
			<scope>test</scope>
		</dependency>
		<!-- Add dependencies for caching -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-redis</artifactId>
		</dependency>

		<!-- PostgreSQL Test Container -->
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>postgresql</artifactId>
			<version>1.20.4</version>
			<scope>test</scope>
		</dependency>

		 <!--JUnit-->
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>1.17.6</version>
			<scope>test</scope>
		</dependency>
		<!-- Embedded Redis for Testing -->
		<dependency>
			<groupId>it.ozimov</groupId>
			<artifactId>embedded-redis</artifactId>
			<version>0.7.2</version>
			<scope>test</scope>
		</dependency>

		<!-- Optional: For using JSON serialization in Redis
			 You don't need this if we are not serializing in redis
			 -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.18.2</version>
		</dependency>

		<!-- Jackson Module for java 8 Date/Time API
			 This will ensure the product entity is
			 properly serialize in redis By default,
			 Jackson does not support LocalDateTime and LocalDate serialization.
			 This module enables proper serialization and deserialization when working with Redis.
			-->
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
			<version>2.18.2</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

			<!-- These are not really needed in jdk17 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.2</version>
				<configuration>
					<argLine>
						--add-opens java.base/java.lang=ALL-UNNAMED
						--add-opens java.base/java.util=ALL-UNNAMED
						--add-opens java.base/java.util.concurrent=ALL-UNNAMED
						--add-opens java.rmi/sun.rmi.transport=ALL-UNNAMED
						<!---javaagent:"${settings.localRepository}/org/mockito/mockito-agent/5.2.0/mockito-agent-5.2.0.jar"-->
					</argLine>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.mockito</groupId>
						<artifactId>mockito-junit-jupiter</artifactId>
						<version>5.2.0</version> <!-- Use the latest version -->
					</dependency>
				</dependencies>
			</plugin>


		</plugins>
	</build>
<!--Ctrl + Shift + /-->
</project>
